Add Configurable interface, arrange configurations.